# do-not-cry

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  install.sh
.github/: pull_request_template.md
.github/workflows/: release.yml
res/: DONOTCRY.txt
src/: lib.rs  main.rs
test_files/dir/: test.txt
